--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.298.0",
     "next": "14.0.4",
     "next-axiom": "^0.18.1",
+    "openai": "^4.47.2",
     "p-retry": "^6.1.0",
     "react": "^18",
     "react-dom": "^18",
