--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.600.0",
+    "@aws-sdk/s3-request-presigner": "^3.600.0",
     "@supabase/supabase-js": "^2.39.1",
     "@tailwindcss/forms": "^0.5.2",
     "@upstash/kafka": "^1.3.4-canary.1",
@@ -17,6 +19,7 @@
     "@upstash/redis": "^1.25.2",
     "@vercel/analytics": "^1.1.1",
     "@vercel/og": "^0.6.1",
+    "axios": "^1.7.2",
     "escape-string-regexp": "5.0.0",
     "framer-motion": "^10.16.16",
     "html-entities": "^2.4.0",
