--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-wrap-balancer": "^1.1.0",
+    "sharp": "^0.33.4",
     "swr": "^2.2.4",
     "vercel": "^33.0.0"
   },
