--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,12 @@
 display_information:
   name: Gengar Bark
   description: gengar bark bark
-  background_color: '#5c1582'
+  background_color: "#5c1582"
 features:
+  app_home:
+    home_tab_enabled: false
+    messages_tab_enabled: true
+    messages_tab_read_only_enabled: false
   bot_user:
     display_name: Gengar Bark
     always_online: false
@@ -10,33 +14,61 @@ features:
     - command: /say
       url: https://gengar-bark-next.vercel.app/api/say
       description: anonymous saying
-      usage_hint: '[ love bob ]'
+      usage_hint: "[ love bob ]"
       should_escape: true
     - command: /watch
       url: https://gengar-bark-next.vercel.app/api/watch
       description: status changing
-      usage_hint: '[ add/rm ID(s), ls ]'
+      usage_hint: "[ add/rm ID(s), ls ]"
       should_escape: false
     - command: /message
       url: https://gengar-bark-next.vercel.app/api/message
       description: vocal
-      usage_hint: '[ rm url ]'
+      usage_hint: "[ rm url ]"
+      should_escape: false
+    - command: /ai
+      url: https://gengar-bark-next.vercel.app/api/ai
+      description: 🤖
+      usage_hint: "[ ? ]"
+      should_escape: false
+    - command: /bob
+      url: https://gengar-bark-next.vercel.app/api/bob
+      description: 🥰
+      usage_hint: cheesy pickup lines
+      should_escape: false
+    - command: /ci
+      url: https://gengar-bark-next.vercel.app/api/ci
+      description: ci build watch
+      usage_hint: "[ repo branch ]"
       should_escape: false
 oauth_config:
+  redirect_urls:
+    - https://gengar-bark-next.vercel.app/api/path
   scopes:
+    user:
+      - users.profile:read
+      - users.profile:write
     bot:
+      - app_mentions:read
+      - channels:history
       - channels:read
       - chat:write
+      - chat:write.public
       - commands
       - emoji:read
       - groups:history
       - groups:read
       - groups:write
+      - im:history
+      - im:read
       - users:read
+      - users:read.email
+      - im:write
 settings:
   event_subscriptions:
     request_url: https://gengar-bark-next.vercel.app/api/event
     bot_events:
+      - app_mention
       - channel_archive
       - channel_created
       - emoji_changed
