--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@vercel/analytics": "^1.1.1",
     "@vercel/og": "^0.6.1",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "escape-string-regexp": "5.0.0",
     "framer-motion": "^10.16.16",
     "html-entities": "^2.4.0",
     "html-to-mrkdwn": "^3.0.0",
+    "jest": "^29.7.0",
     "lucide-react": "^0.298.0",
     "next": "14.0.4",
     "next-axiom": "^0.18.1",
