--- a/package.json
+++ b/package.json
@@ -1,52 +1,36 @@
 {
   "name": "gengar-bark-next",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write ."
+    "lint": "next lint"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.600.0",
-    "@aws-sdk/s3-request-presigner": "^3.600.0",
     "@supabase/supabase-js": "^2.39.1",
-    "@tailwindcss/forms": "^0.5.2",
     "@upstash/kafka": "^1.3.4-canary.1",
     "@upstash/qstash": "^2.5.4",
     "@upstash/redis": "^1.25.2",
-    "@vercel/analytics": "^1.1.1",
-    "@vercel/og": "^0.6.1",
     "axios": "^1.7.2",
-    "dotenv": "^16.4.5",
     "escape-string-regexp": "5.0.0",
-    "framer-motion": "^10.16.16",
     "html-entities": "^2.4.0",
     "html-to-mrkdwn": "^3.0.0",
-    "jest": "^29.7.0",
-    "lucide-react": "^0.298.0",
     "next": "14.0.4",
     "next-axiom": "^0.18.1",
     "openai": "^4.47.2",
     "p-retry": "^6.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-wrap-balancer": "^1.1.0",
-    "sharp": "0.32.6",
-    "swr": "^2.2.4",
-    "vercel": "^33.0.0"
+    "sharp": "0.32.6"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "csv": "^6.3.9",
+    "@types/react": "18.3.12",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
