--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "p-retry": "^6.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "0.32.6"
+    "sharp": "0.32.6",
+    "framer-motion": "^10.16.4"
   },
   "devDependencies": {
     "@types/node": "^20",
