--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@upstash/redis": "^1.25.2",
     "axios": "^1.7.2",
     "escape-string-regexp": "5.0.0",
+    "framer-motion": "^10.16.4",
     "html-entities": "^2.4.0",
     "html-to-mrkdwn": "^3.0.0",
     "next": "14.2.10",
@@ -24,8 +25,8 @@
     "p-retry": "^6.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "0.32.6",
-    "framer-motion": "^10.16.4"
+    "react-medium-image-zoom": "^5.2.11",
+    "sharp": "0.32.6"
   },
   "devDependencies": {
     "@types/node": "^20",
