--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,3 @@
 {
-  "extends": "next/core-web-vitals",
-  "rules": {
-    "@next/next/no-page-custom-font": "off",
-    "react/no-unescaped-entities": "off"
-  }
+  "extends": "next/core-web-vitals"
 }
