--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.600.0",
+    "@nivo/calendar": "^0.88.0",
     "@supabase/supabase-js": "^2.39.1",
     "@upstash/kafka": "^1.3.4-canary.1",
     "@upstash/qstash": "^2.5.4",
     "@upstash/redis": "^1.25.2",
     "axios": "^1.7.2",
     "escape-string-regexp": "5.0.0",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.18.0",
     "html-entities": "^2.4.0",
     "html-to-mrkdwn": "^3.0.0",
     "next": "14.2.10",
@@ -26,13 +27,18 @@
     "react": "^18",
     "react-dom": "^18",
     "react-medium-image-zoom": "^5.2.11",
+    "react-share": "^5.1.1",
+    "recharts": "^2.14.1",
     "sharp": "0.32.6"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "18.3.12",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5"
   }
 }
