--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.600.0",
     "@nivo/calendar": "^0.88.0",
+    "@slack/bolt": "^4.1.1",
     "@supabase/supabase-js": "^2.39.1",
     "@upstash/kafka": "^1.3.4-canary.1",
     "@upstash/qstash": "^2.5.4",
@@ -24,12 +25,15 @@
     "next-axiom": "^0.18.1",
     "openai": "^4.47.2",
     "p-retry": "^6.1.0",
+    "pg": "^8.13.1",
     "react": "^18",
     "react-dom": "^18",
     "react-medium-image-zoom": "^5.2.11",
     "react-share": "^5.1.1",
     "recharts": "^2.14.1",
-    "sharp": "0.32.6"
+    "reflect-metadata": "^0.2.2",
+    "sharp": "0.32.6",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@types/node": "^20",
