--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": [
     "next-env.d.ts",
