--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "NODE_NO_WARNINGS=1 next dev",
+    "build": "NODE_NO_WARNINGS=1 next build",
+    "start": "NODE_NO_WARNINGS=1 next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.600.0",
-    "@nivo/calendar": "^0.88.0",
     "@slack/bolt": "^4.1.1",
-    "@supabase/supabase-js": "^2.39.1",
+    "@supabase/supabase-js": "^2.39.3",
     "@upstash/kafka": "^1.3.4-canary.1",
     "@upstash/qstash": "^2.5.4",
     "@upstash/redis": "^1.25.2",
@@ -21,11 +20,13 @@
     "framer-motion": "^10.18.0",
     "html-entities": "^2.4.0",
     "html-to-mrkdwn": "^3.0.0",
+    "lodash": "^4.17.21",
     "next": "14.2.10",
     "next-axiom": "^0.18.1",
     "openai": "^4.47.2",
+    "p-limit": "^6.1.0",
     "p-retry": "^6.1.0",
-    "pg": "^8.13.1",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
     "react-medium-image-zoom": "^5.2.11",
@@ -36,6 +37,7 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "18.3.12",
     "autoprefixer": "^10.4.20",
