--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "react-medium-image-zoom": "^5.2.11",
     "react-share": "^5.1.1",
     "recharts": "^2.14.1",
