--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -32,12 +32,12 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/amd64,linux/arm64  # Add both platforms
+          platforms: linux/amd64,linux/arm64
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/gengar-bark:latest
 
-      - name: deploy
+      - name: Deploy to server
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
@@ -49,4 +49,7 @@ jobs:
             docker rm gengar-bark || true
             docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/gengar-bark:latest || true
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/gengar-bark:latest
-            docker run -d --name gengar-bark -p 3001:3000 ${{ secrets.DOCKERHUB_USERNAME }}/gengar-bark
+            docker run -d --name gengar-bark \
+              -p 3001:3000 \
+              --env-file /etc/gengar-bark/.env \
+              ${{ secrets.DOCKERHUB_USERNAME }}/gengar-bark:latest
