🐛 fix(Dockerfile): clean up Dockerfile and add env file support for better configuration
✨ feat(workflow): mount env file in Docker run command for production

✨ feat(next.config.js): add environment variable configuration for base URL

✨ feat(entrypoint): create entrypoint script to manage environment variables and start the application

--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -52,4 +52,5 @@ jobs:
             docker run -d --name gengar-bark \
               -p 3001:3000 \
               --env-file /etc/gengar-bark/.env \
+              -v /etc/gengar-bark/.env:/app/.env:ro \
               ${{ secrets.DOCKERHUB_USERNAME }}/gengar-bark:latest
