--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -12,17 +12,22 @@ jobs:
       packages: write
       contents: read
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v3
-      -
-        name: Set up QEMU
+
+      - name: Create env file
+        run: |
+          touch .env
+          echo "${{ secrets.ENV_PROD }}" > .env
+          cat .env
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -51,6 +56,4 @@ jobs:
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/gengar-bark:latest
             docker run -d --name gengar-bark \
               -p 3001:3000 \
-              --env-file /etc/gengar-bark/.env \
-              -v /etc/gengar-bark/.env:/app/.env:ro \
               ${{ secrets.DOCKERHUB_USERNAME }}/gengar-bark:latest
