🚀 chore(deploy_prod): streamline env file creation in GitHub Actions workflow

--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -69,12 +69,11 @@ jobs:
           echo "VERSION=${TS}-${SHA_SHORT}" >> $GITHUB_OUTPUT
 
       - name: Create env file
+        shell: bash
+        env:
+          ENV_CONTENT: ${{ secrets.ENV_PROD }}
         run: |
-          echo "${{ secrets.ENV_PROD }}" > .env
-          if [ ! -s .env ]; then
-            echo "Error: Empty .env file"
-            exit 1
-          fi
+          echo "$ENV_CONTENT" > .env
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
