--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.2.23",
     "next-axiom": "^0.18.1",
     "openai": "^4.47.2",
+    "p-limit": "^6.2.0",
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
