--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,9 +7,13 @@ on:
       - '**.md'
       - '.gitignore'
       - 'LICENSE'
+      - '.github/**'
 
 env:
   IMAGE_NAME: docker-registry.baobo.me/gengar-bark
+  NODE_VERSION: '18'
+  DOCKER_BUILDKIT: 1
+  COMPOSE_DOCKER_CLI_BUILD: 1
 
 jobs:
   test:
@@ -20,46 +24,35 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Run security audit
-        run: npm audit
-
       - name: Run tests
         run: npm test
 
-      - name: Run linting
-        run: npm run lint
-
-  security-scan:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: 'fs'
-          scan-ref: '.'
-          format: 'table'
-          exit-code: '1'
-          ignore-unfixed: true
-          severity: 'CRITICAL,HIGH'
-
   deploy:
-    needs: [test, security-scan]
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      packages: write
 
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          version: latest
+          platforms: linux/amd64
+          driver-opts: |
+            image=moby/buildkit:latest
+            network=host
 
       - name: Generate version tag
         id: tag
@@ -75,11 +68,21 @@ jobs:
         run: |
           echo "$ENV_CONTENT" > .env
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-        with:
-          platforms: linux/amd64
-          buildkitd-flags: --debug
+      - name: Optimize build context
+        run: |
+          # 创建简化版的 .dockerignore
+          cat > .dockerignore <<EOF
+          .git
+          .github
+          .next
+          node_modules
+          npm-debug.log
+          README.md
+          .gitignore
+          .env.example
+          tests
+          coverage
+          EOF
 
       - name: Login to Registry
         uses: docker/login-action@v2
@@ -87,6 +90,14 @@ jobs:
           registry: docker-registry.baobo.me
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
+
+      - name: Set up Docker layer caching
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
       - name: Build and push
         uses: docker/build-push-action@v4
@@ -96,13 +107,33 @@ jobs:
           tags: |
             ${{ env.IMAGE_NAME }}:latest
             ${{ env.IMAGE_NAME }}:${{ steps.tag.outputs.VERSION }}
-          cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:buildcache
-          cache-to: type=registry,ref=${{ env.IMAGE_NAME }}:buildcache,mode=max
+          cache-from: |
+            type=local,src=/tmp/.buildx-cache
+            type=registry,ref=${{ env.IMAGE_NAME }}:buildcache
+          cache-to: |
+            type=local,dest=/tmp/.buildx-cache-new,mode=max
+            type=registry,ref=${{ env.IMAGE_NAME }}:buildcache,mode=max
           build-args: |
             NODE_ENV=production
+            BUILDKIT_INLINE_CACHE=1
           target: production
-          provenance: true
-          sbom: true
+          platforms: linux/amd64
+          labels: |
+            org.opencontainers.image.source=${{ github.event.repository.html_url }}
+            org.opencontainers.image.revision=${{ github.sha }}
+          outputs: type=registry,compression=zstd,compression-level=5,force-compression=true
+
+      # 临时缓存处理
+      - name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+      - name: Check image size
+        run: |
+          docker pull ${{ env.IMAGE_NAME }}:${{ steps.tag.outputs.VERSION }}
+          IMAGE_SIZE=$(docker image inspect ${{ env.IMAGE_NAME }}:${{ steps.tag.outputs.VERSION }} --format='{{.Size}}')
+          echo "Image size: $(echo "scale=2; $IMAGE_SIZE/1024/1024" | bc) MB"
 
       - name: Deploy
         uses: appleboy/ssh-action@master
@@ -111,17 +142,6 @@ jobs:
           username: ${{ secrets.HOST_USERNAME }}
           key: ${{ secrets.HOST_SSHKEY }}
           script: |
-            set -e
-            
-            # 创建备份目录
-            BACKUP_DIR="/app/gengar-bark/backup"
-            mkdir -p $BACKUP_DIR
-            
-            # 备份当前配置
-            if [ -f /app/gengar-bark/docker-compose.yml ]; then
-              cp /app/gengar-bark/docker-compose.yml $BACKUP_DIR/docker-compose.yml.$(date +%Y%m%d%H%M)
-            fi
-            
             # 创建应用目录
             mkdir -p /app/gengar-bark
             cd /app/gengar-bark
@@ -134,90 +154,62 @@ jobs:
                 image: ${{ env.IMAGE_NAME }}:${{ steps.tag.outputs.VERSION }}
                 container_name: gengar-bark
                 ports:
-                  - "127.0.0.1:3001:3000"
+                  - "3001:3000"
                 restart: unless-stopped
                 healthcheck:
                   test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
                   interval: 30s
-                  timeout: 5s
+                  timeout: 10s
                   retries: 3
-                  start_period: 20s
+                  start_period: 40s
                 deploy:
                   resources:
                     limits:
-                      cpus: '1'
                       memory: 1G
                     reservations:
-                      cpus: '0.25'
                       memory: 512M
                 logging:
                   driver: "json-file"
                   options:
-                    max-size: "10m"
+                    max-size: "50m"
                     max-file: "3"
                 labels:
                   deployment.version: ${{ steps.tag.outputs.VERSION }}
-                security_opt:
-                  - no-new-privileges:true
+                  deployment.timestamp: "$(date -u +'%Y-%m-%dT%H:%M:%SZ')"
             EOF
             
-            # 拉取新镜像
+            # 拉取新镜像并部署
             docker compose pull
-            
-            # 优雅停止当前容器
-            if docker compose ps | grep -q "Up"; then
-              docker compose stop -t 30
-            fi
-            
-            # 启动新版本
             docker compose up -d
             
             # 等待服务健康检查通过
-            echo "Waiting for service to be healthy..."
             timeout 60s bash -c 'until docker compose ps | grep -q "(healthy)"; do sleep 2; done'
             
+            # 清理旧镜像和缓存
+            docker system prune -af --filter "until=24h"
+            
             # 验证部署
-            RETRY_COUNT=0
-            MAX_RETRIES=3
-            
-            while [ $RETRY_COUNT -lt $MAX_RETRIES ]; do
-              if curl -f http://localhost:3001/health; then
-                echo "Health check passed"
-                break
-              fi
-            
-              RETRY_COUNT=$((RETRY_COUNT+1))
-            
-              if [ $RETRY_COUNT -eq $MAX_RETRIES ]; then
-                echo "Health check failed after $MAX_RETRIES attempts"
-                docker compose logs
-                # 回滚到上一个版本
-                if [ -f $BACKUP_DIR/docker-compose.yml.* ]; then
-                  LAST_BACKUP=$(ls -t $BACKUP_DIR/docker-compose.yml.* | head -1)
-                  echo "Rolling back to previous version..."
-                  cp $LAST_BACKUP docker-compose.yml
-                  docker compose up -d
-                  exit 1
-                fi
-              fi
-            
-              sleep 5
-            done
-            
-            # 清理旧镜像和备份
-            docker image prune -f
-            find $BACKUP_DIR -name "docker-compose.yml.*" -mtime +7 -delete
+            if ! curl -f http://localhost:3001/health; then
+              echo "Health check failed"
+              docker compose logs --tail 100
+              exit 1
+            fi
 
       - name: Verify Deployment
         if: success()
         run: |
           echo "✅ Deployment successful"
           echo "Version: ${{ steps.tag.outputs.VERSION }}"
-          echo "Timestamp: $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
+          echo "Deployed at: $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
 
       - name: Notify on Failure
         if: failure()
         run: |
           echo "❌ Deployment failed"
-          echo "Version: ${{ steps.tag.outputs.VERSION }}"
-          echo "Timestamp: $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
+          echo "Please check the logs for more details"
+
+      - name: Clean up
+        if: always()
+        run: |
+          docker builder prune -f
+          docker image prune -f
