--- a/.env.example
+++ b/.env.example
@@ -78,3 +78,9 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3000
 # MaxKB
 MAXKB_BASE_URL=your_maxkb_base_url
 MAXKB_API_KEY=your_maxkb_api_key
+
+# Redshift Configuration
+REDSHIFT_HOST=your_host
+REDSHIFT_USERNAME=your_username
+REDSHIFT_PASSWORD=your_password
+REDSHIFT_PORT=5439
