--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.600.0",
+    "@google/genai": "^0.8.0",
+    "@modelcontextprotocol/sdk": "^1.9.0",
     "@slack/bolt": "^4.1.1",
     "@supabase/supabase-js": "^2.39.3",
     "@upstash/kafka": "^1.3.4-canary.1",
